--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,16 +2,32 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.frc_scouting">
 
-    <application android:allowBackup="true" android:icon="@mipmap/ic_launcher" android:label="@string/app_name" android:roundIcon="@mipmap/ic_launcher_round" android:supportsRtl="true" android:theme="@style/Theme.FRCScouting">
-        <activity android:name=".BluetoothActivity" android:exported="false"> </activity>
-
-        <activity android:name=".MainActivity" android:exported="true"  android:label="Hello World">
+    <application
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/Theme.FRCScouting">
+        <activity
+            android:name=".DataEntryActivity"
+            android:exported="false"
+            android:label="@string/Data_Collection_Title">
+        </activity>
+        <activity
+            android:name=".BluetoothActivity"
+            android:exported="false">
+        </activity>
+        <activity
+            android:name=".LaunchActivity"
+            android:exported="true"
+            android:label="@string/Welcome_Title">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
