--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         </activity>
         <activity
             android:name=".BluetoothActivity"
-            android:exported="false">
+            android:exported="false"
+            android:label="Sending Data">
         </activity>
         <activity
             android:name=".LaunchActivity"
