--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,10 +1,25 @@
-name: Build
-on: [pull_request, push]
+name: Android Build
+
+on: pull_request
+
 jobs:
   build:
+
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout the code
-        uses: actions/checkout@v2
-      - name: Build the app
-        run: ./gradlew build
+      - uses: actions/checkout@v1
+
+      - name: Set Up JDK              // 1
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+
+      - name: Change wrapper permissions  // 2
+        run: chmod +x ./gradlew
+
+      - name: Run Tests                   // 3
+        run: ./gradlew test
+
+      - name: Build Project               // 4
+        run: ./gradlew assemble
