--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -9,7 +9,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
-
+      
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+      
       - name: Set Up JDK              // 1
         uses: actions/setup-java@v1
         with:
