--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -10,19 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       
-      - name: Make gradlew executable
-        run: chmod +x ./gradlew
-      
-      - name: Set Up JDK              // 1
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
-
-      - name: Change wrapper permissions  // 2
-        run: chmod +x ./gradlew
-
-      - name: Run Tests                   // 3
-        run: ./gradlew test
-
-      - name: Build Project               // 4
-        run: ./gradlew assemble
+      - name: Android Build
+      # You may pin to the exact commit or the version.
+      # uses: vgaidarji/android-github-actions-build@0888eff41ad409a802aa4ccd7790a91891da9056
+      - uses: vgaidarji/android-github-actions-build@v1.0.1
