--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,4 +1,4 @@
-name: Android Build
+name: tests
 
 on: pull_request
 
@@ -8,9 +8,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v1
-      
-      - name: Android Build
-      # You may pin to the exact commit or the version.
-      # uses: vgaidarji/android-github-actions-build@0888eff41ad409a802aa4ccd7790a91891da9056
-      - uses: vgaidarji/android-github-actions-build@v1.0.1
+      - name: APK build action
+        # You may pin to the exact commit or the version.
+        # uses: MayMeow/apk-build-action@95e89a1681596fb6f674c5d0151993db6eb12789
+        uses: MayMeow/apk-build-action@v3
+        with:
+          # ANDROID_COMPILE_SDK is the version of Android you're compiling with.
+          android-compile-sdk: 31.0
+          # ANDROID_BUILD_TOOLS is the version of the Android build tools you are using.
+          android-build-tools: 21.1.0
+          # It's what version of the command line tools we're going to download from the official site.
+          android-sdk-tools: 26.1.1
