--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,20 +1,68 @@
-name: tests
+name: Minimal Android CI Workflow
 
-on: pull_request
+on:
+  push:
+    branches:
+      - master
+    tags:
+      - 'v*'
 
 jobs:
-  build:
-
+  test:
+    name: Run Unit Tests
     runs-on: ubuntu-latest
-
     steps:
-        # You may pin to the exact commit or the version.
-        # uses: MayMeow/apk-build-action@95e89a1681596fb6f674c5d0151993db6eb12789
-        - uses: MayMeow/apk-build-action@v3
-          with:
-          # ANDROID_COMPILE_SDK is the version of Android you're compiling with.
-            android-compile-sdk: 31.0
-            # ANDROID_BUILD_TOOLS is the version of the Android build tools you are using.
-            android-build-tools: 21.1.0
-            # It's what version of the command line tools we're going to download from the official site.
-            android-sdk-tools: 26.1.1
+      - name: Checkout
+        uses: actions/checkout@v1
+      - name: Setup JDK
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Run Tests
+        run: bash ./gradlew test --stacktrace  
+  apk:
+    name: Generate APK
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+      - name: Setup JDK
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Build APK
+        run: bash ./gradlew assembleDebug --stacktrace
+      - name: Upload APK
+        uses: actions/upload-artifact@v1
+        with:
+          name: apk
+          path: app/build/outputs/apk/debug/app-debug.apk 
+  release:
+    name: Release APK
+    needs: apk
+    if: startsWith(github.ref, 'refs/tags/v')
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download APK from build
+        uses: actions/download-artifact@v1
+        with:
+          name: apk  
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }} 
+      - name: Upload Release APK
+        id: upload_release_asset
+        uses: actions/upload-release-asset@v1.0.1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: apk/app-debug.apk
+          asset_name: MensaApp.apk
+          asset_content_type: application/zip
