Remove Bluetooth Activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,18 +2,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.frc_scouting">
 
-    <!-- Allows app to scan for Bluetooth devices. The app will never use Bluetooth to track location-->
-    <uses-permission android:name="android.permission.BLUETOOTH_SCAN" android:usesPermissionFlags="neverForLocation" />
-
-    <!-- Allow app to make the device discoverable to Bluetooth devices. -->
-    <uses-permission android:name="android.permission.BLUETOOTH_ADVERTISE" />
-
-    <!-- Allow app to communicate with already-paired Bluetooth devices. -->
-    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
-
-    <!-- Request legacy Bluetooth permissions on older devices. -->
-    <uses-permission android:name="android.permission.BLUETOOTH"  android:maxSdkVersion="30" />
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"  android:maxSdkVersion="30" />
+    <!-- Allows app to scan for Bluetooth devices. The app will never use Bluetooth to track location -->
+    <uses-permission
+        android:name="android.permission.BLUETOOTH_SCAN"
+        android:usesPermissionFlags="neverForLocation" /> <!-- Allow app to make the device discoverable to Bluetooth devices. -->
+    <uses-permission android:name="android.permission.BLUETOOTH_ADVERTISE" /> <!-- Allow app to communicate with already-paired Bluetooth devices. -->
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" /> <!-- Request legacy Bluetooth permissions on older devices. -->
+    <uses-permission
+        android:name="android.permission.BLUETOOTH"
+        android:maxSdkVersion="30" />
+    <uses-permission
+        android:name="android.permission.BLUETOOTH_ADMIN"
+        android:maxSdkVersion="30" />
 
     <application
         android:allowBackup="true"
@@ -23,15 +23,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FRCScouting">
         <activity
+            android:name=".Sucsess"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:exported="false"
+            android:label="@string/title_activity_sucsess"
+            android:theme="@style/Theme.FRCScouting.Fullscreen" />
+        <activity
             android:name="com.ibxcodecat.frc_scouting.DataEntryActivity"
             android:exported="false"
-            android:label="@string/Data_Collection_Title">
-        </activity>
+            android:label="@string/Data_Collection_Title"></activity>
         <activity
             android:name="com.ibxcodecat.frc_scouting.BluetoothActivity"
             android:exported="false"
-            android:label="Sending Data">
-        </activity>
+            android:label="Sending Data"></activity>
         <activity
             android:name="com.ibxcodecat.frc_scouting.LaunchActivity"
             android:exported="true"
